Correcting the alignment of the divs

--- a/style.css
+++ b/style.css
@@ -1,68 +1,57 @@
-/*@media only screen and (max-width: 1440px){*/
+@media only screen and (max-width: 1440px){
   body {
   font-family: 'Helvetica', sans-serif;
 }
   h1{
     font-size: 51px;
     font-weight: normal;
-    text-align: center;
+    /*text-align: center;*/
   }
-  /*.container{
-    position: fixed;
-    width: 100%;
-    height: 100%;
-    left:0;
-    background-color: #FFFF66;
-    margin:auto;
-    overflow: scroll;
-  }*/
   .module-title{
     background-color: rgba(200, 213, 221, 0.5);
   }
   .module-stories{
     background-color: rgba(254, 233, 000,0.5);
   }
-  /*.ad{
-    float: right;
-    width: 300px;
-    height: 250px;
-    border: 1px solid black;
-    margin: auto;
-    overflow: auto;
-  }*/
   .ad img{
     float: right;
     width: 300px;
     height: 250px;
-    margin: 20px;
+    /*margin: 20px;*/
   }
   .module-stories .number-1{
     float: left;
-    width: 500px;
-    height: 500px;
+    width: 350px;
+    height: 350px;
     border: 1px solid black;
     background-image: url("images/kee-peele.jpg");
     background-repeat: no-repeat;
     background-size: cover;
     opacity: 0.65;
+    /*text-align: center;*/
+    margin-top: 180px;
+    margin-left: 50px;
   }
   .module-stories .number-2{
     float: left;
-    width: 250px;
-    height: 250px;
+    width: 200px;
+    height: 200px;
     border: 1px solid black;
     margin-right: 190px;
     margin-top: 1px;
-    margin-left: 25px
+    margin-left: 15px;
   }
   .module-stories .number-3{
     float: right;
     width: 350px;
     height: 350px;
     border: 1px solid black;
+    margin-top: 15px;
+    margin-right: 240px;
   }
   .module-stories .number-4{
-    margin-top: 50px;
+    margin-top: 15px;
+    margin-right: 15px;
     float: right;
     width: 250px;
     height: 250px;
@@ -70,11 +59,13 @@
   }
   .module-stories .number-5{
     float: right;
-    width: 400px;
+    width: 350px;
     height: 350px;
     border: 1px solid black;
+    margin-top: 15px;
+    margin-right: 15px;
   }
-  .module-stories .number-1,.number-2,.number-3,.number-4,.number-5 .info{
+  .info{
     font-size: 44px;
     font-weight: bold;
   }
@@ -82,5 +73,9 @@
     font-size: 30px;
     font-weight: lighter;
   }
+  .number-1, .number-4, .number-5 .number{
+    margin-top: 0px;
+    float: right;
+  }
 
-/*}*/
+}
